# rust-systems-programming

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
1-crawl/: Cargo.toml
1-crawl/src/: main.rs
2-parse/src/: main.rs
3-parsing-log-files/: Cargo.toml
3-parsing-log-files/src/: main.rs
4-external-programs/: Cargo.toml
4-external-programs/src/: lib.rs  main.rs
5-compliance-json/: Cargo.toml
5-compliance-json/src/: main.rs
6-compliance-advanced/src/: main.rs
7-exit-status/: Cargo.toml
7-exit-status/src/: main.rs
calculator/src/: main.rs
compliance-rules/: rules.json
logs/: dummy-log.txt
