[package]
name = "external-programs"
version = "0.1.0"
authors = ["Rashid Rasul and Alfredo Deza"]
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive", "env"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
log = "0.4.25"
env_logger = "0.11.6"
